[package]
name = "hex_arch_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.5"
dialoguer = "0.9.0"
rouille = "3.5.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
